Les cartes sont rendus des petites lettres et je trouve ca bien

--- a/catalogue.html
+++ b/catalogue.html
@@ -65,6 +65,8 @@
 
     <main>
 
+        <h1>Les Populaires</h1>
+
         <section class="presentation-cartes">
           
           <article class="article-base">
@@ -72,11 +74,15 @@
               <div class="image-timbre">
                 <img src="css/img/Timbre.png" alt="">
               </div>
-              <div>
-                <h1>hello-world</h1>
+              <div class="carte-droite">
+                <h3>hello-world</h3>
+                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quidem illum sunt, adipisci officia pariatur doloribus ut impedit soluta placeat ad itaque, error, expedita deleniti ducimus tempore amet laudantium numquam animi!</p>
               </div>
             </section>
             <section class="bas-carte">
+                <div class="icone-temps">
+                    <img src="" alt="">
+                </div>
             </section>
           </article>
 
