debut de la banniere carrousel

--- a/catalogue.html
+++ b/catalogue.html
@@ -103,7 +103,7 @@
 
             <section class="separateur-flex">
               <div class="image-timbre">
-                <img src="css/img/Timbre.png" alt="">
+                <img src="css/img/rare-stamp-queen-victoriajpg.jpg" alt="">
               </div>
               <div class="carte-droite">
                 <h3>hello-world</h3>
@@ -117,7 +117,7 @@
                     <small>2j:6h:45m</small>
                 </div>
                 <div class="prix-cartes">
-                  <pre>1,500,800$</pre>
+                  <pre>5,800$</pre>
                 </div>
                 <div class="interaction-cartes">
                     <button><img src="/css/img/heart.png" alt=""></button>
@@ -132,7 +132,7 @@
 
             <section class="separateur-flex">
               <div class="image-timbre">
-                <img src="css/img/Timbre.png" alt="">
+                <img src="css/img/stamp-printed-canada-shows-queen-elizabeth.jpg" alt="">
               </div>
               <div class="carte-droite">
                 <h3>hello-world</h3>
@@ -146,7 +146,7 @@
                     <small>2j:6h:45m</small>
                 </div>
                 <div class="prix-cartes">
-                  <pre>1,500,800$</pre>
+                  <pre>770$</pre>
                 </div>
                 <div class="interaction-cartes">
                     <button><img src="/css/img/heart.png" alt=""></button>
@@ -161,7 +161,7 @@
 
             <section class="separateur-flex">
               <div class="image-timbre">
-                <img src="css/img/Timbre.png" alt="">
+                <img src="css/img/canada-stamp-95-edward-vii-50-1908.jpg" alt="">
               </div>
               <div class="carte-droite">
                 <h3>hello-world</h3>
@@ -175,7 +175,7 @@
                     <small>2j:6h:45m</small>
                 </div>
                 <div class="prix-cartes">
-                  <pre>1,500,800$</pre>
+                  <pre>1,500$</pre>
                 </div>
                 <div class="interaction-cartes">
                     <button><img src="/css/img/heart.png" alt=""></button>
@@ -190,7 +190,7 @@
 
             <section class="separateur-flex">
               <div class="image-timbre">
-                <img src="css/img/Timbre.png" alt="">
+                <img src="css/img/044_001.jpg" alt="">
               </div>
               <div class="carte-droite">
                 <h3>hello-world</h3>
@@ -204,7 +204,7 @@
                     <small>2j:6h:45m</small>
                 </div>
                 <div class="prix-cartes">
-                  <pre>1,500,800$</pre>
+                  <pre>2,210$</pre>
                 </div>
                 <div class="interaction-cartes">
                     <button><img src="/css/img/heart.png" alt=""></button>
@@ -219,7 +219,7 @@
 
             <section class="separateur-flex">
               <div class="image-timbre">
-                <img src="css/img/Timbre.png" alt="">
+                <img src="css/img/russie-vers-timbre.jpg" alt="">
               </div>
               <div class="carte-droite">
                 <h3>hello-world</h3>
@@ -233,7 +233,7 @@
                     <small>2j:6h:45m</small>
                 </div>
                 <div class="prix-cartes">
-                  <pre>1,500,800$</pre>
+                  <pre>930$</pre>
                 </div>
                 <div class="interaction-cartes">
                     <button><img src="/css/img/heart.png" alt=""></button>
@@ -248,7 +248,7 @@
 
             <section class="separateur-flex">
               <div class="image-timbre">
-                <img src="css/img/Timbre.png" alt="">
+                <img src="css/img/avion-rare-de-cru-d-exposition-de-timbre.jpg" alt="">
               </div>
               <div class="carte-droite">
                 <h3>hello-world</h3>
@@ -262,7 +262,7 @@
                     <small>2j:6h:45m</small>
                 </div>
                 <div class="prix-cartes">
-                  <pre>1,500,800$</pre>
+                  <pre>5,800$</pre>
                 </div>
                 <div class="interaction-cartes">
                     <button><img src="/css/img/heart.png" alt=""></button>
@@ -277,7 +277,7 @@
 
             <section class="separateur-flex">
               <div class="image-timbre">
-                <img src="css/img/Timbre.png" alt="">
+                <img src="css/img/us-stamp-postage-issues-2721-elvis-presley-29-1993.jpg" alt="">
               </div>
               <div class="carte-droite">
                 <h3>hello-world</h3>
@@ -291,7 +291,7 @@
                     <small>2j:6h:45m</small>
                 </div>
                 <div class="prix-cartes">
-                  <pre>1,500,800$</pre>
+                  <pre>80$</pre>
                 </div>
                 <div class="interaction-cartes">
                     <button><img src="/css/img/heart.png" alt=""></button>
@@ -306,7 +306,7 @@
 
             <section class="separateur-flex">
               <div class="image-timbre">
-                <img src="css/img/Timbre.png" alt="">
+                <img src="css/img/vintage-stamps-stamp-collecting.jpg" alt="">
               </div>
               <div class="carte-droite">
                 <h3>hello-world</h3>
@@ -320,7 +320,7 @@
                     <small>2j:6h:45m</small>
                 </div>
                 <div class="prix-cartes">
-                  <pre>1,500,800$</pre>
+                  <pre>500$</pre>
                 </div>
                 <div class="interaction-cartes">
                     <button><img src="/css/img/heart.png" alt=""></button>
@@ -332,6 +332,11 @@
           </article>
 
        
+        </section>
+
+
+        <section class="carrousel">
+           <img src="/css/img/banniere-web.png" alt="Les encheres sont de retours!">
         </section>
 
     </main>
