--- a/catalogue.html
+++ b/catalogue.html
@@ -882,23 +882,35 @@
        
         </section>
 
-        <section class="liens-rapides">
-          <div class="Liens-rapide-cadre">
-            <img src="" alt="">
-          </div>
-          <div class="boite-lien">
+      <section class="liens-images">
 
+          <div class="cadre-img">
+            <h1>Par collection</h1>
+            <img src="css/img/post-collection.jpg" alt="">
           </div>
-          <div class="boite-lien">
 
-          </div>
-          <div class="boite-lien">
-
-          </div>
-          <div class="boite-lien">
-
-          </div>
+          <div class="liens-rapides">
+              
+            <div class="boite-lien">
+              <button>La monarchie</button>
+            </div>
+            <div class="boite-lien">
+              <button>La deuxième guerre mondiale</button>
+            </div>
+            <div class="boite-lien">
+              <button>Les défaults de fabrications</button>
+            </div>
+            <div class="boite-lien">
+              <button>Les plus rares</button>
+            </div>
+            <div class="boite-lien">
+              <button>À travers le monde</button>
+            </div>
+            <div class="boite-lien">
+              <button>Au fil du temps</button>
+            </div>
         </section>
+      </section>
 
         <footer>
 
