ajustement des liens

--- a/catalogue.html
+++ b/catalogue.html
@@ -891,23 +891,23 @@
 
           <div class="liens-rapides">
               
-            <div class="boite-lien">
+            <div class="boite-lien monarchie">
               <button>La monarchie</button>
             </div>
-            <div class="boite-lien">
+            <div class="boite-lien deuxiemeGuerre">
               <button>La deuxième guerre mondiale</button>
             </div>
-            <div class="boite-lien">
+            <div class="boite-lien default">
               <button>Les défaults de fabrications</button>
             </div>
-            <div class="boite-lien">
+            <div class="boite-lien rares">
               <button>Les plus rares</button>
             </div>
-            <div class="boite-lien">
+            <div class="boite-lien monde">
               <button>À travers le monde</button>
             </div>
-            <div class="boite-lien">
-              <button>Au fil du temps</button>
+            <div class="boite-lien approuve">
+              <button>Approuvé par le Lord</button>
             </div>
         </section>
       </section>
