liens-rapides terminé, il manque le footer

--- a/catalogue.html
+++ b/catalogue.html
@@ -913,7 +913,32 @@
       </section>
 
         <footer>
-
+          <div class="footer-logo">
+            <img src="/css/img/LS-logo.png" alt="">
+          </div>
+          <div class="nav-social">
+            <a href="#"><img src="/css/img/twitter.png" alt=""></a>
+            <a href="#"><img src="/css/img/facebook.png" alt=""></a>
+          </div>
+          <div class="footer-contact">
+            <ul>
+              <li>a</li>
+              <li>a</li>
+              <li>a</li>
+              <li>a</li>
+              <li>a</li>
+              <li>a</li>
+            </ul>
+          </div>
+          <div class="select-langue">
+            <label for="langue">
+              <select>
+                <option value="francais">Français</option>
+                <option value="anglais">Anglais</option>
+                <option value="espagnol">Espagnol</option>
+              </select>
+            </label>
+          </div>
         </footer>
     </main>
 </body>
