Page de fiche recommencé... la loupe sur l'image fonctionne

--- a/catalogue.html
+++ b/catalogue.html
@@ -30,7 +30,7 @@
             <img src="css\img\LS-logo.png" alt="">
         </div>
         <nav class="navigation-principal">
-            <a href="#">Enchère pupulaires</a>
+            <a href="#">Acceuil</a>
             <a href="#">Actualité</a>
             <div class="dropdown">
                 <button class="dropbtn">Collection</button>
