--- a/carte-infos.html
+++ b/carte-infos.html
@@ -5,15 +5,118 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>carte-info</title>
+    <title>Carte-info</title>
 </head>
-<body class="body-infos-carte">
-    <div class="arriere-flou">
-    </div>
-        <article class="articleInfos">
-            <div id="loupeImg" class="carte-info-img"><img src="/css/img/avion-rare-de-cru-d-exposition-de-timbre.jpg" alt=""></div>
-        </article>
 
-        <script src="./scpt/loupe.js"></script>
-</body>
+<section class="top-header">
+  <section class="client-connexion">     
+      <a href="#">Déconnexion</a> 
+      <small>Bienvenue Nicolas Cage</small>
+  </section>
+  <section class="notifications-utilisateur">
+      <button><img src="/css/img/user.png" alt="utilisateur"></button>
+      <button><img src="/css/img/active.png" alt="notifications"></button>
+  </section>
+  <section class="barre-recherche">
+    <label for="barre-recherche">
+        <div class="icone-fleche-bas"><img src="/css/img/down.png" alt="icone-fleche-bas"></div>
+          <input type="text"> 
+        <div class="icone-recherche"><img src="/css/img/search.png" alt="icone rechercher"></div>
+    </label>
+  </section>
+</section>
+<header>
+  <div class="header-logo-container">
+      <img src="css\img\LS-logo.png" alt="">
+  </div>
+  <nav class="navigation-principal">
+      <a href="#">Acceuil</a>
+      <a href="#">Actualité</a>
+      <div class="dropdown">
+          <button class="dropbtn">Collection</button>
+          <div class="dropdown-content">
+            <a href="#">2ième guerre mondiale</a>
+            <a href="#">Les icones Americaines</a>
+            <a href="#">La reine Elizabeth</a>
+            <a href="#">British board of education</a>
+            <a href="#">...</a>
+          </div>
+        </div>
+                
+      <div class="dropdown">
+          <button class="dropbtn">À propos</Contactez-nous></button>
+          <div class="dropdown-content">
+            <a href="#">Gallery</a>
+            <a href="#">Archives</a>
+            <a href="#">Historique</a>
+            <a href="#">Qui sommes-nous?</a>
+          </div>
+      </div>
+      <div class="dropdown">
+          <button class="dropbtn">Contactez-nous</button>
+          <div class="dropdown-content">
+            <a href="#">Téléphone</a>
+            <a href="#">Courriel</a>
+            <a href="#">Aide rapide</a>
+          </div>
+        </div>  
+  </nav>
+</header>
+
+  <main>
+
+    <section class="infos-carte-boite">
+
+        <div class="img-infos-carte-separateur">
+          <div class="mini-img">
+            <img src="" alt="">
+            <img src="" alt="">
+            <img src="" alt="">
+            <img src="" alt="">
+            <img src="" alt="">
+        </div>
+          <div class="infos-carte-img">
+              <img id="big-img" src="css\img\canada-stamp-95-edward-vii-50-1908.jpg" alt="">
+          </div>
+        </div>
+
+        <div class="infos-carte-text">
+          <div></h1>Canada Stamp #95 - Edward VII (1908) 50¢<h1></div>
+          <div></div>
+          <div></div>
+          <div></div>
+        </div>
+
+    </section>
+
+    <section class="infos-carte-bas">
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+    </section>
+  
+       
+
+  </main>
+        <script src="js/loupe.js"></script>
+        <footer>
+            <div class="footer-logo">
+              <img src="/css/img/LS-logo.png" alt="">
+            </div>
+            <div class="nav-social">
+              <a href="#"><img src="/css/img/twitter.png" alt=""></a>
+              <a href="#"><img src="/css/img/facebook.png" alt=""></a>
+            </div>
+            <div class="select-langue">
+              <label for="langue">
+                <select>
+                  <option value="francais">Français</option>
+                  <option value="anglais">Anglais</option>
+                  <option value="espagnol">Espagnol</option>
+                </select>
+              </label>
+            </div>
+          </footer>
+    </body>
 </html>
