page carte infos presque finalisé

--- a/catalogue.html
+++ b/catalogue.html
@@ -340,7 +340,7 @@
             <button><img src="/css/img/left-arrow.png" alt="left"></button>
             <button><img src="/css/img/right-arrow.png" alt="left"></button>
           </div>
-          <div class="action-horaire"><button>Voir les horaires</button></div>
+          <div class="action-btn"><button>Voir les horaires</button></div>
            <img src="/css/img/banniere-web.png" alt="Les encheres sont de retours!">
         </section>
 
