Début de la page d'acceuil

--- a/carte-infos.html
+++ b/carte-infos.html
@@ -7,7 +7,8 @@
     <link rel="stylesheet" href="style.css">
     <title>Carte-info</title>
 </head>
-
+<body>
+  
 <section class="top-header">
   <section class="client-connexion">     
       <a href="#">Déconnexion</a> 
@@ -88,7 +89,7 @@
             <p>Description: Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit hic, deleniti aut ratione delectus nobis ullam suscipit quas magni quibusdam, voluptatibus possimus in? Laudantium ducimus temporibus cum veniam porro perferendis! Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod neque vero voluptatem, culpa, odio totam tempora obcaecati repudiandae, earum sit maiores ullam qui aspernatur beatae placeat hic illum. Numquam, enim!</p>
           </div>
           <div>
-              <section class="infos-carte-prix"><div><h4>Mise actuelle : </h4> <pre> C $1,500</pre></div>  <div><h4>Enchérisseur: </h4> <pre> 67</pre></div></section>
+              <section class="infos-carte-prix"><div><h4>Mise actuelle : </h4> <pre> C $1,500</pre></div>  <div><h4>Enchérisseurs: </h4> <pre> 67</pre></div></section>
                 <section class="infos-carte-btn-action">
                   <button>Enchérir <img src="/css/img/bid.png" alt=""></button>
                   <button>Ajouter aux favorits <img src="/css/img/heart.png" alt=""></button>
@@ -118,17 +119,18 @@
         </div>
         <div>
           <h4>Livraison:</h4>
-          <p>Les livraisons sont estimées à environs 10 jours après le paimenet reçu.
-            Elle peut être plus rapide si vous payez les frais de livraisons express.
-          </p>
           <div class="modes-livraisons line-separation">
             <img src="/css/img/fedex.png" alt="">
             <img src="/css/img/dhl.png" alt="">
             <img src="/css/img/ups-logo.jpg" alt="">
           </div>
+          <p>Les livraisons sont estimées à environs 10 jours après le paimenet reçu.
+            Elles peuvent être plus rapides si vous payez les frais de livraisons express.
+          </p>
+
         </div>
         <div>
-          <h4>Qualité de l'article</h4>
+          <h4>Qualité de l'article:</h4>
           <small>Mint</small>
         </div>
     </section>
