Acceuil presque terminé, il manque quelques profinement

--- a/acceuil.html
+++ b/acceuil.html
@@ -66,9 +66,6 @@
 
     <main>
         <div class="main-header">
-            <h1>Sur un ordinateur, 
-                tout comme un cellulaire, 
-                gagnez des enchères !</h1>
                 <div class="banner-nav">
                     <button><img src="/css/img/left-arrow.png" alt="left"></button>
                     <button><img src="/css/img/right-arrow.png" alt="left"></button>
@@ -76,12 +73,81 @@
             <img src="/css/img/mainHeader.png" alt="">
         </div>
 
-        <section class="vendeur">
-            <div><h2>Devenez vendeur</h2></div>
-            <div><p>Pour devenir vendeur sur notre site, il faut obligatoirement faire une demande d'authentification.
-                Cette demande peut prendre quelques jours à être traité car nous voulons nous assurez que tout nos vendeurs sont fiables et rencontrent des critères spécifiques pour favoriser nos services d'enchères. 
-            </p></div>
-        </section>
+        <div class="articles-acceuil">
+
+            <section class="article-acceuil">
+                <div><h2>Devenez vendeur</h2></div>
+                <div class="article-txt"><p>Afin de devenir vendeur sur notre site, il faut obligatoirement faire une demande d'authentification.
+                    Cette demande peut prendre quelques jours pour être traité car nous voulons nous assurer que tout nos vendeurs sont fiables et rencontrent des critères spécifiques pour favoriser nos services d'enchères. 
+                </p></div>
+                <div class="btn-article-acceuil"><button>Faire une demande &nbsp<img src="/css/img/vendeurIcon.png" alt=""></button></div>
+            </section>
+
+            <section class="article-acceuil">
+                <div><h2>Nos Archives</h2></div>
+                <div class="article-txt"><p>Au fils des années, nous avons cummulés un grand nombre d'enchères historiques et palpitant dans le monde de la philatélie. Par ailleurs, une panoplie d'images et d'articles sont à votre disposition pour en témoigner.
+                </p></div>
+                <div class="btn-article-acceuil"><button>Voir les archives &nbsp<img src="/css/img/archive.png" alt=""></button></div>
+            </section>
+
+            <section class="article-acceuil">
+                <div><h2>Approuvé par le Lord</h2></div>
+                <div class="article-txt"><p>Gardez l'oeil ouvert pour les badges approuvé par le Lord. Cette icone fait mention de la valeure et des spéculations de la rareté des timbres qui auront ce badge. Le Lord est un passionné de philatélie et ce, de génération en génération. Il a une équipe de spécialistes qui l'aide à vous aidez à faire de bons choix éclairés pour vos collections de timbres. 
+                </p></div>
+                <div class="btn-article-acceuil"><button>Voir nos selections &nbsp<img src="/css/img/crown.png" alt=""></button></div>
+            </section>
+
+        </div>
+
+        <div class="infolettre">
+            <section class="infolettre-formulaire">
+
+                <div class="infolettre-header">
+                    <div class="infolettre-txt">
+                        <h3>Abonnez-Vous à l'infolettre!</h3>
+                        <p>Vous serez informés des nouveaux articles sur la philatélie, des prochains enchères en direct et autres sujet qui sont jugés importants et intéressants dans le monde de la collection de timbre!</p>
+                    </div>
+
+                    <div class="infolettre-img">
+                        <img src="/css/img/rare-stamp-queen-victoriajpg.jpg" alt="">
+                    </div>
+                </div>
+
+                <div>
+                    <small>* Vous pouvez vous désabonnez facilement, à n'importe quel moment si l'infolettre ne vous convient plus.</small>
+                </div>
+
+                <div class="infolettre-courriel">
+                    <label for="infolette-courriel">Courriel :</label>
+                    <input name="infolette-courriel" type="text">
+
+                    <button type="submit"><img src="/css/img/sendIcone.png" alt=""></button>
+                </div>
+                
+            </section>
+
+            <section class="article-du-jour">
+                <div class="article-du-jour-header">
+                    <button><img src="/css/img/next.png" alt=""></button>
+                    <h4>Articles du jour</h4> 
+                    <button><img src="/css/img/previous.png" alt=""></button>
+                </div>
+                <div class="article-journalier-titre">
+                    <h5>La philatélie à travers le monde!</h5>
+                    <pre><script> document.write(new Date().toLocaleDateString()); </script></pre>
+                </div>
+                <div class="article-journalier-img">
+                    <img src="/css/img/philatelistArticle.jpg" alt="">
+                </div>
+                <div class="article-journalier-txt">
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eveniet libero quam rem odio, mollitia vitae? Officia, ut corrupti blanditiis obcaecati quidem iste minima eaque error, perferendis ipsum minus cupiditate suscipit! Lorem ipsum dolor sit amet, consectetur adipisicing elit. Modi praesentium necessitatibus suscipit accusantium sint deleniti recusandae provident error delectus nihil! Sed laudantium quia possimus totam adipisci enim animi corporis consequatur? Lorem ipsum dolor, sit amet consectetur adipisicing elit? Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam et corrupti doloremque optio soluta, impedit asperiores error explicabo tempore laborum, similique vitae praesentium! Vitae, adipisci nam ut quaerat maiores ex?</p>
+                </div>
+
+                <div class="article-journalier-btn">
+                    <button type="submit"><img src="/css/img/read-more.png" alt=""></button>
+                </div>
+            </section>
+        </div>
 
         <section class="liens-images">
 
