Modification de la navication dans la page d'acceuil afin de simuler le cas ou un client n'est pas connecte

--- a/acceuil.html
+++ b/acceuil.html
@@ -11,12 +11,7 @@
 <body>
 <section class="top-header">
     <section class="client-connexion">     
-        <a href="#">Déconnexion</a> 
-        <small>Bienvenue Nicolas Cage</small>
-    </section>
-    <section class="notifications-utilisateur">
-        <button><img src="/css/img/user.png" alt="utilisateur"></button>
-        <button><img src="/css/img/active.png" alt="notifications"></button>
+        <a href="#">Connexion</a><pre>/</pre><a href="#">Insciption</a>
     </section>
     <section class="barre-recherche">
       <label for="barre-recherche">
