Le popup de mise d'enchère est terminée

--- a/catalogue.html
+++ b/catalogue.html
@@ -8,6 +8,7 @@
     <title>Catalogue</title>
 </head>
 <body>
+
   <section class="top-header">
     <section class="client-connexion">     
         <a href="#">Déconnexion</a> 
@@ -370,7 +371,7 @@
                 </div>
                 <div class="interaction-cartes">
                     <button><img src="/css/img/heart.png" alt=""></button>
-                    <button><img src="/css/img/bid.png" alt=""></button>
+                    <button class="btn btn-primary"><img src="/css/img/bid.png" alt=""></button>
                     <button><img src="/css/img/plus.png" alt=""></button>
                 </div>
                
@@ -911,6 +912,8 @@
             </div>
         </section>
       </section>
+
+      <script src="js/popup-bid.js"></script>
 
         <footer>
           <div class="footer-logo">
