--- a/carte-infos.html
+++ b/carte-infos.html
@@ -8,6 +8,30 @@
     <title>Carte-info</title>
 </head>
 <body>
+  <div id="mpopupBox" class="mpopup">
+    <!-- Modal content -->
+    <div class="modal-content">
+        <div class="modal-header">
+            <button class="close"><img src="/css/img/cancel.png" alt=""></button>
+            <h3>Combiens voulez-vous miser?</h3>
+        </div>
+        <div class="modal-body">
+          <section class="infos-carte-prix"><div><h4>Mise actuelle : </h4> <pre>C $1,500</pre></div>  <div><h4>Enchérisseurs: </h4> <pre> 67</pre></div></section>
+          <section class="formulaire-mise">
+            <form action="post">
+              <label for="bid">Combiens voulez-vous miser ?<input id="number" type="number" min="0"></label>
+              <label for="pw">Entrez votre mot de passe :<input type="password" id="pw"></label>
+              <label for="pw-confirmation">Confirmer le mot de passe :<input type="password" id="pw"></label>
+            </form>
+            
+          </section>     
+        </div>
+        <div class="modal-footer">
+            <small>*Assurez-vous que vos fonds sont suffisant pour la mise, car si non, celle-ci seras annulée!</small>
+            <button type="button" class="btn btn-primary"><img src="/css/img/bid.png" alt=""></button>
+        </div>
+    </div>
+  </div>
   
 <section class="top-header">
   <section class="client-connexion">     
@@ -91,7 +115,7 @@
           <div>
               <section class="infos-carte-prix"><div><h4>Mise actuelle : </h4> <pre> C $1,500</pre></div>  <div><h4>Enchérisseurs: </h4> <pre> 67</pre></div></section>
                 <section class="infos-carte-btn-action">
-                  <button>Enchérir <img src="/css/img/bid.png" alt=""></button>
+                  <button class="btn btn-primary" id="mpopupLink">Enchérir <img src="/css/img/bid.png" alt=""></button>
                   <button>Ajouter aux favorits <img src="/css/img/heart.png" alt=""></button>
                 </section>
           </div>
@@ -410,6 +434,7 @@
 
   </main>
         <script src="js/loupe.js"></script>
+        <script src="js/popup-bid.js"></script>
         <footer>
             <div class="footer-logo">
               <img src="/css/img/LS-logo.png" alt="">
