profinement de labonnement infolettre. changement de son champ input pour faire comme s'il y avait une ecriture a la main

--- a/acceuil.html
+++ b/acceuil.html
@@ -5,6 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Caveat:wght@500&family=Freehand&family=Pacifico&display=swap" rel="stylesheet">
     <title>Acceuil</title>
 </head>
 
@@ -100,7 +103,7 @@
                 <div class="infolettre-header">
                     <div class="infolettre-txt">
                         <h3>Abonnez-Vous à l'infolettre!</h3>
-                        <p>Vous serez informés des nouveaux articles sur la philatélie, des prochains enchères en direct et autres sujet qui sont jugés importants et intéressants dans le monde de la collection de timbre!</p>
+                        <p>Vous serez informés des nouveaux articles sur la philatélie, des prochains enchères en direct et d'autres sujets qui sont jugés importants et intéressants dans le monde de la collection de timbre!</p>
                     </div>
 
                     <div class="infolettre-img">
@@ -109,7 +112,7 @@
                 </div>
 
                 <div>
-                    <small>* Vous pouvez vous désabonnez facilement, à n'importe quel moment si l'infolettre ne vous convient plus.</small>
+                    <small>* Vous pouvez vous désabonnez facilement et à n'importe quel moment si l'infolettre ne vous convient plus.</small>
                 </div>
 
                 <div class="infolettre-courriel">
@@ -128,7 +131,10 @@
                     <button><img src="/css/img/previous.png" alt=""></button>
                 </div>
                 <div class="article-journalier-titre">
-                    <h5>La philatélie à travers le monde!</h5>
+                    <div class="titre-auteur">
+                        <h5>La philatélie à travers le monde!</h5>
+                        <small>Par Antoine D'Amours</small>
+                    </div>
                     <pre><script> document.write(new Date().toLocaleDateString()); </script></pre>
                 </div>
                 <div class="article-journalier-img">
@@ -144,7 +150,7 @@
             </section>
         </div>
 
-        <section class="liens-images">
+        <section class="liens-images liens-rapides-acceuil">
 
             <div class="cadre-img">
               <h1>Liens rapides</h1>
