--- a/carte-infos.html
+++ b/carte-infos.html
@@ -13,22 +13,22 @@
     <div class="modal-content">
         <div class="modal-header">
             <button class="close"><img src="/css/img/cancel.png" alt=""></button>
-            <h3>Combiens voulez-vous miser?</h3>
+            <h3>Combiens voulez-vous miser ?</h3>
         </div>
         <div class="modal-body">
-          <section class="infos-carte-prix"><div><h4>Mise actuelle : </h4> <pre>C $1,500</pre></div>  <div><h4>Enchérisseurs: </h4> <pre> 67</pre></div></section>
+          <section class="infos-carte-prix"><div><h4>Mise actuelle : </h4> <pre> C$1,500</pre></div>  <div><h4>Enchérisseurs: </h4> <pre> 67</pre></div></section>
           <section class="formulaire-mise">
             <form action="post">
-              <label for="bid">Combiens voulez-vous miser ?<input id="number" type="number" min="0"></label>
-              <label for="pw">Entrez votre mot de passe :<input type="password" id="pw"></label>
+              <label for="bid">Entrer le montant de votre mise :<input id="number" type="number" value="1501" min="1501"></label>
+              <label for="pw">Entrer votre mot de passe :<input type="password" id="pw"></label>
               <label for="pw-confirmation">Confirmer le mot de passe :<input type="password" id="pw"></label>
             </form>
             
           </section>     
         </div>
         <div class="modal-footer">
-            <small>*Assurez-vous que vos fonds sont suffisant pour la mise, car si non, celle-ci seras annulée!</small>
-            <button type="button" class="btn btn-primary"><img src="/css/img/bid.png" alt=""></button>
+            <small>*Assurez-vous que vos fonds sont suffisants pour la mise, car si non, celle-ci seras annulée !</small>
+            <button type="button" class="btn btn-primary">Confirmer  &nbsp<img src="/css/img/bid.png" alt=""></button>
         </div>
     </div>
   </div>
