--- a/carte-infos.html
+++ b/carte-infos.html
@@ -43,11 +43,11 @@
       <button><img src="/css/img/active.png" alt="notifications"></button>
   </section>
   <section class="barre-recherche">
-    <label for="barre-recherche">
         <div class="icone-fleche-bas"><img src="/css/img/down.png" alt="icone-fleche-bas"></div>
-          <input type="text"> 
+        <label for="barre-recherche" name="search">
+          <input type="text">
+        </label>
         <div class="icone-recherche"><img src="/css/img/search.png" alt="icone rechercher"></div>
-    </label>
   </section>
 </section>
 <header>
@@ -115,8 +115,8 @@
           <div>
               <section class="infos-carte-prix"><div><h4>Mise actuelle : </h4> <pre> C $1,500</pre></div>  <div><h4>Enchérisseurs: </h4> <pre> 67</pre></div></section>
                 <section class="infos-carte-btn-action">
-                  <button class="btn btn-primary" id="mpopupLink">Enchérir <img src="/css/img/bid.png" alt=""></button>
-                  <button>Ajouter aux favorits <img src="/css/img/heart.png" alt=""></button>
+                  <button class="btn btn-primary btns-actions" id="mpopupLink">Enchérir <img src="/css/img/bid.png" alt=""></button>
+                  <button class="btns-actions">Ajouter aux favorits <img src="/css/img/heart.png" alt=""></button>
                 </section>
           </div>
           <div><script src="https://cdn.logwork.com/widget/countdown.js"></script>
