--- a/catalogue.html
+++ b/catalogue.html
@@ -44,11 +44,11 @@
         <button><img src="/css/img/active.png" alt="notifications"></button>
     </section>
     <section class="barre-recherche">
-      <label for="barre-recherche">
           <div class="icone-fleche-bas"><img src="/css/img/down.png" alt="icone-fleche-bas"></div>
-            <input type="text"> 
+          <label for="barre-recherche" name="search">
+            <input type="text">
+          </label> 
           <div class="icone-recherche"><img src="/css/img/search.png" alt="icone rechercher"></div>
-      </label>
     </section>
   </section>
     <header>
@@ -363,10 +363,10 @@
 
         <section class="carrousel">
           <div class="banner-nav">
-            <button><img src="/css/img/left-arrow.png" alt="left"></button>
-            <button><img src="/css/img/right-arrow.png" alt="left"></button>
+            <button class="btn-arrow"><img src="/css/img/left-arrow.png" alt="left"></button>
+            <div class="action-btn"><button class="btns-actions">Voir les horaires &nbsp<img src="/css/img/calendarIcon.png" alt=""></button></div>
+            <button class="btn-arrow"><img src="/css/img/right-arrow.png" alt="left"></button>
           </div>
-          <div class="action-btn"><button>Voir les horaires &nbsp<img src="/css/img/calendarIcon.png" alt=""></button></div>
            <img src="/css/img/banniere-web.png" alt="Les encheres sont de retours!">
         </section>
 
